--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -14,6 +14,7 @@
     <string name="disable">禁用</string>
     <string name="text">文本</string>
     <string name="url">网址</string>
+    <string name="failed_open">打开失败!</string>
     <string name="full_date_short">yyyy 年 MMM dd 日 hh:mm a</string>
 
     <!-- MainLayout -->
@@ -67,6 +68,7 @@
     <string name="selected_picture">选定的图片</string>
     <string name="open_with">打开方式</string>
     <string name="picture_size_limit">图片大小不能超过25MB!</string>
+    <string name="detail_file_not_found">由于文件未找到，无法将详细信息添加到任务!</string>
 
     <!-- Notification -->
     <string name="task_reminder">任务提醒</string>
