--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="disable">Disable</string>
     <string name="text">Text</string>
     <string name="url">URL</string>
+    <string name="failed_open">Failed to open!</string>
     <string name="full_date_short">yyyy dd MMM hh:mm a</string>
 
     <!-- MainLayout -->
@@ -66,6 +67,7 @@
     <string name="selected_picture">Selected picture</string>
     <string name="open_with">Open with</string>
     <string name="picture_size_limit">Picture size cannot more than 25MB!</string>
+    <string name="detail_file_not_found">Failed to add detail to task due to file not found!</string>
 
     <!-- Notification -->
     <string name="task_reminder">Task Reminder</string>
