--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -104,7 +104,7 @@
     <string name="selected_file">已选择!</string>
     <string name="back_disabled_notice">返回操作已禁用! 请等待程序处理完成…</string>
     <string name="select_file_to_import">请选择要导入的文件!</string>
-    <string name="error_try_undo_import">错误! 尝试撤消导入…</string>
+    <string name="failed_in_zip">失败！请确保 zip 有效！（提示：查看日志以了解更多详细信息）</string>
     <string name="finished">完成!</string>
     <string name="processing">正在处理…</string>
 
