--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -126,5 +126,7 @@
     <string name="picture_compression_rate">任務詳細內容圖片壓縮率</string>
     <string name="compression_rate_describe">更高的壓縮率將節省更多的儲存空間</string>
     <string name="original">原始</string>
+    <string name="in_0_to_100_only">僅允許使用 0 到 100 之間的整數!</string>
+    <string name="custom">客製化</string>
 
 </resources>
