--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -72,6 +72,10 @@
     <string name="picture_size_limit">圖片大小不能超過 50MB!</string>
     <string name="detail_file_not_found">由於文件未找到，無法將詳細內容新增至任務!</string>
     <string name="failed_add_picture">新增圖片失敗!</string>
+    <string name="video_size_limit">影片大小不能超過350MB!</string>
+    <string name="play_video">播放影片</string>
+    <string name="click_select_video">點擊選擇視頻</string>
+    <string name="video">影片</string>
 
     <!-- Notification -->
     <string name="task_reminder">提醒</string>
