--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -140,5 +140,6 @@
     <string name="original">原始</string>
     <string name="in_0_to_100_only">仅允许使用 0 到 100 之间的整数!</string>
     <string name="custom">自定义</string>
+    <string name="recently_reminded_keep_time">最近提醒任务保留时间</string>
 
 </resources>
