--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,5 +139,6 @@
     <string name="original">Original</string>
     <string name="in_0_to_100_only">Only integers between 0 and 100 are allowed!</string>
     <string name="custom">Custom</string>
+    <string name="recently_reminded_keep_time">Recently reminded task keep time</string>
 
 </resources>
