Improve UI screen size adaptability [Added an option to open sys notification setting] [Added screen size limit]

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -27,6 +27,8 @@
     <string name="scroll_to_top">滚动\n到顶端</string>
     <string name="failed_large_file_size">失败！文件大小不能大于 %1$sMB</string>
     <string name="report_normal_file_size">如果文件大小不大于 %1$sMB，请向开发人员报告</string>
+    <string name="unsupported_screen_size">不支持的屏幕尺寸</string>
+    <string name="unsupported_screen_size_describe">抱歉，您的设备屏幕尺寸太小；应用程序无法正确显示UI。</string>
 
     <!-- TaskLayout -->
     <string name="task_date_format">yyyy 年 MMM dd 日</string>
@@ -151,5 +153,7 @@
     <string name="donate_describe">如果你喜欢我的作品，请考虑捐款支持我!</string>
     <string name="clear_history_when_leaved">离开应用程序时清除所有历史记录</string>
     <string name="disable_undo_button">禁用撤消按钮</string>
+    <string name="system_notify_settings">系统通知设置</string>
+    <string name="system_notify_settings_describe">点击以设置通知的振动、声音、覆盖免打扰等。</string>
 
 </resources>
