--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="scroll_to_top">Scroll\nto top</string>
     <string name="failed_large_file_size">Failed! File size cannot be larger than %1$sMB</string>
     <string name="report_normal_file_size">Please report to developer if file size not larger than %1$sMB</string>
+    <string name="unsupported_screen_size">Unsupported screen size</string>
+    <string name="unsupported_screen_size_describe">Sorry, your device\'s screen size is too small; the app cannot display the UI correctly.</string>
 
     <!-- TaskLayout -->
     <string name="task_date_format">dd MMM yyyy</string>
@@ -150,5 +152,7 @@
     <string name="donate_describe">If you like my work, please consider supporting me with a donation!</string>
     <string name="clear_history_when_leaved">Clear all history when leaving the app</string>
     <string name="disable_undo_button">Disable undo button</string>
+    <string name="system_notify_settings">System notification settings</string>
+    <string name="system_notify_settings_describe">Click to set the vibration, sound, override do not disturb, etc. of the notification.</string>
 
 </resources>
