--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -27,6 +27,8 @@
     <string name="scroll_to_top">捲動\n至頂端</string>
     <string name="failed_large_file_size">失敗！檔案大小不能大於 %1$sMB</string>
     <string name="report_normal_file_size">如果檔案大小不大於 %1$sMB，請向開發人員報告</string>
+    <string name="unsupported_screen_size">不支援的螢幕尺寸</string>
+    <string name="unsupported_screen_size_describe">抱歉，您的裝置螢幕尺寸太小；應用程式無法正確顯示介面。</string>
 
     <!-- TaskLayout -->
     <string name="task_date_format">yyyy 年 MMM dd 日</string>
@@ -151,5 +153,7 @@
     <string name="donate_describe">如果你喜歡我的作品，請考慮捐款支持我!</string>
     <string name="clear_history_when_leaved">離開應用程式時清除所有歷史檔案</string>
     <string name="disable_undo_button">禁用撤銷按鈕</string>
+    <string name="system_notify_settings">系統通知設定</string>
+    <string name="system_notify_settings_describe">點選可設定通知的震動、聲音、覆蓋免打擾等。</string>
 
 </resources>
