Optimize view task description dialog [Added pin button to task info dialog when this task in reminded] [Added date text tooltip to reminded task] [Re-design InfoAlertDialog.kt UI]

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -87,6 +87,7 @@
     <string name="click_select_audio">點選選擇音訊</string>
     <string name="video_compression_rate">任務詳細視訊壓縮率</string>
     <string name="failed_add_video">新增影片失敗!</string>
+    <string name="task_info">任務資訊</string>
 
     <!-- Notification -->
     <string name="task_reminder">提醒</string>
