--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -87,6 +87,7 @@
     <string name="click_select_audio">点击选择音频</string>
     <string name="video_compression_rate">任务详情视频压缩率</string>
     <string name="failed_add_video">添加视频失败!</string>
+    <string name="task_info">任务信息</string>
 
     <!-- Notification -->
     <string name="task_reminder">任务提醒</string>
