--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -14,6 +14,8 @@
     <string name="disable">禁用</string>
     <string name="text">文本</string>
     <string name="url">网址</string>
+    <string name="open">打开</string>
+    <string name="open_with">打开方式</string>
     <string name="failed_open">打开失败!</string>
     <string name="processing">正在处理…</string>
     <string name="full_date_short">yyyy 年 MMM dd 日 hh:mm a</string>
@@ -68,7 +70,6 @@
     <string name="picture">图片</string>
     <string name="click_select_picture">单击选择图片</string>
     <string name="selected_picture">选定的图片</string>
-    <string name="open_with">打开方式</string>
     <string name="picture_size_limit">图片大小不能超过 50MB!</string>
     <string name="detail_file_not_found">由于文件未找到，无法将详细信息添加到任务!</string>
     <string name="failed_add_picture">添加图片失败!</string>
